# formation_project_13

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile.demo  README.md  docker-compose.demo.yaml  docker-compose.yaml  oc-lettings-site.sqlite3  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: build-clean.yml  build-demo.yml  build.yml  ci-operator.yml  deploy.yml  lint.yml  release-operator.yml  test.yml
data/: oc-lettings-site.sqlite3
data_clean/: clean-oc-lettings-site.sqlite3
data_demo/: oc-lettings-site.sqlite3
doc/: conf.py  deployment.rst  getting_started.rst  index.rst  specifications.rst  usage.rst
doc/_build/doctrees/: deployment.doctree  environment.pickle  getting_started.doctree  index.doctree  installation.doctree  interface.doctree  specifications.doctree  usage.doctree
doc/_build/html/: .buildinfo  deployment.html  genindex.html  getting_started.html  (+8 more)
lettings/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
lettings/migrations/: 0001_initial.py  0002_alter_address_options.py
lettings/tests/: conftest.py  test_models.py  test_urls.py  test_views.py
oc_lettings_site/: apps.py  settings.py  tests.py  urls.py  views.py
oc_lettings_site/migrations/: 0002_remove_letting_address_delete_address_delete_letting.py  0003_delete_profile.py
oc_lettings_site/tests/: test_urls.py  test_views.py
profiles/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
templates/: base.html  index.html
templates/errors/: 404.html  500.html
(+7 files in other folders)
