[project]
name = "formation-project-13"
version = "0.1.0"
description = "Orange Country Lettings Website."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "python-dotenv>=1.1.1",
    "sentry-sdk[django]==2.34.0",
    "whitenoise>=6.9.0",
]

[project.optional-dependencies]
docker = [
    "gunicorn~=23.0"
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "oc_lettings_site.settings"
python_files = [
    "tests.py",
    "test_*.py",
    "*_test.py",
    "*_tests.py"
]
